--- a/SpringLearning/SpringBoot-Security/src/main/resources/templates/login.html
+++ b/SpringLearning/SpringBoot-Security/src/main/resources/templates/login.html
@@ -9,6 +9,8 @@
 <form action="/user/login" method="post">
     ⽤户名:<input type="text" name="username"><br/>
     密码:<input type="password" name="passwd"><br/>
+    验证码：<input type="text" name="vcode"><img th:src="@{/vcode}"><br/>
+    记住我:<input type="checkbox" name="remember-me"><br/>
     <input type="submit" value="登录"><br/>
 </form>
 </body>
